tests/fixtures/invalid/multiple_no_edges.mmd
flowchart TD
    Start --> A{true?}
    A -->|Yes| B[println 'yes']
    A -->|No| C[println 'no1']
    A -->|No| D[println 'no2']
    B --> End
    C --> End
    D --> End
